Thu Aug 12 11:21:12 1999  Loic Dachary  <loic@ceic.com>

	* strptime fixes : AC_FUNC_STRPTIME defined in acinclude.m4 and used in configure.in,
	  conditional compilation of strptime.c (only if HAVE_STRPTIME not defined),
	  removed Htstrptime (strptime.c now defines strptime), changed all calls to Htstrptime
	  to calls to strptime.

Wed Aug 11 16:59:41 1999  Loic Dachary  <loic@ceic.com>

	* */Makefile.am: use -release instead of -version-info because nobody
	  wants to bother with published shared lib interfaces version numbers
	  at present.

	* htlib/Makefile.am: added langinfo.h

Wed Aug 11 15:00:07 1999  Loic Dachary  <loic@yoda.ceic.com>

	* acconfig.h: removed MAX_WORD_LENGTH

	* re-run auto* to make sure chain is consistent

	* Makefile.am: improve distclean for tests

Wed Aug 11 13:46:22 1999  Loic Dachary  <loic@yoda.ceic.com>

	* configure.in: change --enable-test to --enable-tests so
	  that Berkeley DB tests are not activated. Since they depend
	  on tcl this can be a pain.

	* acinclude.m4: AM_PROG_TIME locate time command + find out
	  if verbose output is -l (freebsd) or -v (linux)

Wed Aug 11 13:13:39 1999  Loic Dachary  <loic@yoda.ceic.com>

	* acinclude.m4 : AM_WITH_ZLIB autoconf macro for zlib detection that
	  allows --with-zlib=DIR to specify the install root of zlib, 
	  --without-zlib to prevent inclusion of zlib. If nothing 
	  specified zlib is searched in /usr and /usr/local.
	  --disable-zlib is replaced with --without-zlib.

	* configure.in,configure,aclocal.m4,db/dist/acinclude.m4,
	  db/dist/aclocal.m4,db/dist/configure,db/dist/configure.in:
	  changed to use AM_WITH_ZLIB

Tue Aug 10 21:14:34 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc (outputVariable): Fix compilation error with
	assignment between char * and char *.

	* htsearch/htsearch.cc (main): Use cleaner trick to sidestep
	discarding const char * as suggested by Gilles.

Tue Aug 10 17:24:12 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
