@@ -1,3 +1,7 @@
+Thu Aug 12 11:12:07 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htdoc/attrs.html(logging): added Geoff's description of log lines.
+
 Thu Aug 12 11:21:12 1999  Loic Dachary  <loic@ceic.com>
 
 	* strptime fixes : AC_FUNC_STRPTIME defined in acinclude.m4 and used in configure.in,
